--- a/.github/workflows/generate-all.yml
+++ b/.github/workflows/generate-all.yml
@@ -92,6 +92,13 @@ jobs:
       spec-link: https://developers.phoenixnap.com/portals/api/sites/phoenixnap-prod-developerportal/liveportal/apis/payments/download_spec
       module-name: PaymentsApi
       gem-name: pnap_payments_api
+  generate-invoicingapi:
+    needs: prerequisite
+    uses: ./.github/workflows/_generate.yml
+    with:
+      spec-link: https://developers.phoenixnap.com/portals/api/sites/phoenixnap-prod-developerportal/liveportal/apis/invoicing/download_spec
+      module-name: InvoicingApi
+      gem-name: pnap_invoicing_api
 
   # Push generated code
   push-changes:
@@ -108,6 +115,7 @@ jobs:
       - generate-locationapi
       - generate-billingapi
       - generate-paymentsapi
+      - generate-invoicingapi
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
