--- a/.github/workflows/publish-sdk.yml
+++ b/.github/workflows/publish-sdk.yml
@@ -45,6 +45,21 @@ jobs:
     with:
       module-name: LocationApi
       test-file: tc_location_api.rb
+  build-and-test-paymentsapi:
+    uses: ./.github/workflows/_common.yml
+    with:
+      module-name: PaymentsApi
+      test-file: tc_payments_api.rb
+  build-and-test-invoicingapi:
+    uses: ./.github/workflows/_common.yml
+    with:
+      module-name: InvoicingApi
+      test-file: tc_invoicing_api.rb
+  build-and-test-billingapi:
+    uses: ./.github/workflows/_common.yml
+    with:
+      module-name: BillingApi
+      test-file: tc_billing_api.rb
 
   publish:
     name: Publish SDK
@@ -57,6 +72,9 @@ jobs:
       - build-and-test-tagapi
       - build-and-test-networkstorageapi
       - build-and-test-locationapi
+      - build-and-test-paymentsapi
+      - build-and-test-invoicingapi
+      - build-and-test-billingapi
     uses: ./.github/workflows/_publish.yml
     secrets: 
       RUBYGEMS_API_KEY: ${{ secrets.RUBYGEMS_API_KEY }}
