Added cleanup logic

--- a/.github/workflows/generate-all.yml
+++ b/.github/workflows/generate-all.yml
@@ -119,6 +119,19 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
+      - name: Clean up modules
+        run: |
+          rm -r ./AuditApi \
+           ./BillingApi \
+           ./BmcApi \
+           ./InvoicingApi \
+           ./IpApi \
+           ./LocationApi \
+           ./NetworkApi \
+           ./NetworkStorageApi \
+           ./PaymentsApi \
+           ./RancherApi \
+           ./TagApi
       - name: Download Artifacts
         uses: actions/download-artifact@v3
       - name: Move spec files
