--- a/.github/workflows/generate-all.yml
+++ b/.github/workflows/generate-all.yml
@@ -137,15 +137,29 @@ jobs:
       - name: Move spec files
         run: |
           find . -type f -name "*.spec.yaml" -not -path "./specs/*" -print0 | xargs -0 mv -ft ./specs/
-      - name: Add and Commit files
+            - id: commit-step
+        name: Add and Commit files
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add -A
 
-          if test "$(git status --porcelain=v1 2>/dev/null | wc -l)" -gt "0" ; then git commit -m "Add changes"; else echo No changes found; fi
+          if test "$(git status --porcelain=v1 2>/dev/null | wc -l)" -gt "0" ;
+          then 
+            git commit -m "Add changes";
+            echo "CHANGES_FOUND=true" >> "$GITHUB_OUTPUT";
+          else 
+            echo No changes found;
+            echo "CHANGES_FOUND=false" >> "$GITHUB_OUTPUT";
+          fi
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: ${{ github.ref }}
+
+  validate-all:
+    if: ${{ needs.push-changes.outputs.CHANGES_FOUND }}
+    needs:
+      - push-changes
+    uses: ./.github/workflows/validate-all.yml
