Tried alternative for allowing additional properties

--- a/.github/workflows/composite/generate-sdk/action.yml
+++ b/.github/workflows/composite/generate-sdk/action.yml
@@ -43,8 +43,7 @@ runs:
           -c openapi-generator-config.yaml \
           -o ${{ inputs.module-name }} \
           --additional-properties moduleName=${{ inputs.module-name }} \
-          --additional-properties gemName=${{ inputs.gem-name }} \
-          --additional-properties disallowAdditionalPropertiesIfNotPresent=true
+          --additional-properties gemName=${{ inputs.gem-name }}
     - name: Download spec files
       shell: bash
       run: wget ${{ inputs.spec-link }} -O ./${{ inputs.module-name }}/${{ inputs.module-name }}.spec.yaml
