--- a/.github/workflows/_common.yml
+++ b/.github/workflows/_common.yml
@@ -30,23 +30,9 @@ jobs:
         with:
           module-name: ${{ inputs.module-name }}
   test:
-    name: Test ${{ inputs.module-name }} ruby v ${{ matrix.ruby-version }}
-    runs-on: ubuntu-latest
     needs:
       - lint
-    services:
-      mockserver:
-        image: mockserver/mockserver:5.15.0
-        ports:
-          - 1080:1080
-    strategy:
-      fail-fast: false
-      matrix:
-        ruby-version: [ '2.7', '3.1' ]
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/workflows/composite/test-sdk
-        with:
-          test-file: ${{ inputs.test-file }}
-          test-report-dir: tests
-          ruby-version: ${{ matrix.ruby-version }}
+    uses: ./.github/workflows/_test.yml
+    with:
+      module-name: ${{ inputs.module-name }}
+      test-suite: ${{ inputs.test-file }}
