Made publish-test-reults dependent on run-generic-tests

--- a/.github/workflows/validate-all.yml
+++ b/.github/workflows/validate-all.yml
@@ -83,6 +83,7 @@ jobs:
       - build-and-test-paymentsapi
       - build-and-test-invoicingapi
       - build-and-test-billingapi
+      - run-generic-tests
     runs-on: ubuntu-latest
     if: always()
     steps:
