Feature/allow additional properties (#64)
* Allowing additional properties

* Switched disallow to true to see if there's any generation changes

* Tried alternative for allowing additional properties

* Added misc test to workflow

* Fix validate

* fixed another workflow

* fix #3

* Add changes

* Updated test

* Made publish-test-reults dependent on run-generic-tests

* fixed name of misc file

---------

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/.github/workflows/composite/generate-sdk/action.yml
+++ b/.github/workflows/composite/generate-sdk/action.yml
@@ -37,7 +37,13 @@ runs:
         mv ./VERSION ./${{ inputs.module-name }}/VERSION
     - name: Generate SDK
       shell: bash
-      run: openapi-generator-cli generate -i ${{ inputs.spec-link }} -c openapi-generator-config.yaml -o ${{ inputs.module-name }} --additional-properties moduleName=${{ inputs.module-name }} --additional-properties gemName=${{ inputs.gem-name }}
+      run: |
+        openapi-generator-cli generate \
+          -i ${{ inputs.spec-link }} \
+          -c openapi-generator-config.yaml \
+          -o ${{ inputs.module-name }} \
+          --additional-properties moduleName=${{ inputs.module-name }} \
+          --additional-properties gemName=${{ inputs.gem-name }}
     - name: Download spec files
       shell: bash
       run: wget ${{ inputs.spec-link }} -O ./${{ inputs.module-name }}/${{ inputs.module-name }}.spec.yaml
