--- a/.github/workflows/composite/test-sdk/action.yml
+++ b/.github/workflows/composite/test-sdk/action.yml
@@ -28,5 +28,5 @@ runs:
       if: always()
       uses: actions/upload-artifact@v4
       with:
-        name: Test Results - ${{ inputs.ruby-version }}
+        name: Test Results - ${{ inputs.test-file }} - ${{ inputs.ruby-version }}
         path: '${{ inputs.test-report-dir }}/*'
