--- a/.gitignore
+++ b/.gitignore
@@ -47,7 +47,8 @@ build-iPhoneSimulator/
 
 # for a library or gem, you might want to ignore these files since the code is
 # intended to run in multiple environments; otherwise, check them in:
-# Gemfile.lock
+# UPDATE: uncommented lockfile for compatability support (we test 2.7 and 3.4).
+Gemfile.lock
 # .ruby-version
 # .ruby-gemset
 
